; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_napi_schedule_or_enable_events.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_napi_schedule_or_enable_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenvif_queue = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xenvif_napi_schedule_or_enable_events(%struct.xenvif_queue* %0) #0 {
  %2 = alloca %struct.xenvif_queue*, align 8
  %3 = alloca i32, align 4
  store %struct.xenvif_queue* %0, %struct.xenvif_queue** %2, align 8
  %4 = load %struct.xenvif_queue*, %struct.xenvif_queue** %2, align 8
  %5 = getelementptr inbounds %struct.xenvif_queue, %struct.xenvif_queue* %4, i32 0, i32 1
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @RING_FINAL_CHECK_FOR_REQUESTS(i32* %5, i32 %6)
  %8 = load i32, i32* %3, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.xenvif_queue*, %struct.xenvif_queue** %2, align 8
  %12 = getelementptr inbounds %struct.xenvif_queue, %struct.xenvif_queue* %11, i32 0, i32 0
  %13 = call i32 @napi_schedule(i32* %12)
  br label %14

14:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @RING_FINAL_CHECK_FOR_REQUESTS(i32*, i32) #1

declare dso_local i32 @napi_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
